--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "./tsconfig.extend.json",
   "compilerOptions": {
     "target": "es5",
     "lib": [
@@ -22,6 +23,5 @@
   },
   "include": [
     "src"
-  ],
-  "extends": "./tsconfig.extend.json"
+  ]
 }
